[package]
name = "vor"
version = "0.0.0"
authors = ["Phil J. Laszkowicz <phil@fillip.pro>"]
include = [
        "Cargo.toml",
        "src/main.rs",
        "src/narrator/src/lib.rs",
        "src/daemon/main.rs",
]

[[bin]]
name = "vor"
path = "src/main.rs"

[[bin]]
name = "vor-daemon"
path = "src/daemon/main.rs"

[dependencies]

[dependencies.vor-narrator]
path = "src/narrator"
version = "0.0.0"
